# public-transport-rest/src/main/java/ptc/springframework/publictransportrest/entities/Account.java
@@ -28,5 +28,9 @@ public class Account {
     private User user;
 
     @NotNull
-    private Long balance;
+    private Integer balance;
+
+    public void addBalance(int addToBalance) {
+        this.balance += addToBalance;
+    }
 }
