# public-transport-rest/src/main/java/ptc/springframework/publictransportrest/entities/TicketType.java
@@ -7,6 +7,7 @@ import org.hibernate.annotations.GenericGenerator;
 import javax.persistence.*;
 import javax.validation.constraints.NotNull;
 import java.time.LocalDateTime;
+import java.util.List;
 import java.util.UUID;
 
 @Getter
@@ -42,5 +43,8 @@ public class TicketType {
     private UUID modifiedBy;
 
     private LocalDateTime modifiedOn;
+
+    @OneToMany(mappedBy = "ticketType", fetch = FetchType.LAZY, cascade = CascadeType.ALL)
+    private List<Ticket> tickets;
 
 }
